--- a/index.html
+++ b/index.html
@@ -1,14 +1,190 @@
-<!doctype HTML>
-<html>
-  <head>
-    <title>Games</title>
-    <link rel="icon" type="image/x-icon" href="favicon.png">
-  </head>
-  <body bgcolor="#000000">
-    <a href="!Pokemon.html"><img src="Pokemon Logo.png" alt="Pokemon" width="200"></a>
-    <br>
-    <a href="!Mario.html"><img src="Super Mario.png" alt="Super Mario" width="200"></a>
-    <br>
-    <a href="!LOZ.html"><img src="Zelda.png" alt="Legend of Zelda" width="200"></a>
-    <br>
-    <a href="!Misc.html"><h2><font color="#FFFFFF"><span style="font-weight:normal">Misc.</span></font></h2></a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>ROMs</title>
+  <link rel="icon" type="image/x-icon" href="favicon.png">
+  <style>
+    :root {
+      --bg-dark: #111;
+      --text-light: #eee;
+      --primary: #007bff;
+      --accent: #ff4081;
+    }
+
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: var(--bg-dark);
+      color: var(--text-light);
+      text-align: center;
+    }
+
+    .topnav {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      background-color: #222;
+      padding: 10px 0;
+    }
+
+    .topnav a,
+    .dropbtn {
+      color: white;
+      padding: 12px 18px;
+      text-decoration: none;
+      font-size: 16px;
+      background: none;
+      border: none;
+      cursor: pointer;
+    }
+
+    .topnav a:hover,
+    .dropdown:hover .dropbtn {
+      background-color: #444;
+    }
+
+    .dropdown {
+      position: relative;
+    }
+
+    .dropdown-content {
+      display: none;
+      position: absolute;
+      top: 42px;
+      left: 0;
+      background-color: #333;
+      min-width: 160px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+      z-index: 1;
+    }
+
+    .dropdown-content a {
+      display: block;
+      color: #eee;
+      padding: 12px;
+      text-align: left;
+    }
+
+    .dropdown-content a:hover {
+      background-color: #555;
+    }
+
+    .dropdown:hover .dropdown-content {
+      display: block;
+    }
+
+    h1 {
+      margin-top: 30px;
+      font-size: 3em;
+      color: var(--primary);
+    }
+
+    .section {
+      margin: 50px auto;
+      max-width: 800px;
+    }
+
+    .card {
+      background-color: #1e1e1e;
+      border-radius: 12px;
+      margin: 20px auto;
+      padding: 20px;
+      box-shadow: 0 6px 16px rgba(0, 0, 0, 0.6);
+      transition: transform 0.3s ease;
+      cursor: pointer;
+    }
+
+    .card:hover {
+      transform: translateY(-5px);
+    }
+
+    .rom-image {
+      max-width: 200px;
+      height: auto;
+      margin-bottom: 15px;
+    }
+
+    a {
+      color: inherit;
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: none;
+    }
+
+  </style>
+</head>
+<body>
+
+  <div class="topnav">
+    <a href="index.html">Home</a>
+    <div class="dropdown">
+      <button class="dropbtn">Proxies</button>
+      <div class="dropdown-content">
+        <a href="!Proxies.html">Main</a>
+        <a href="!Tsunami.html">Tsunami</a>
+        <a href="https://galaxy.hop.sh/web" target="_blank">Interstellar</a>
+        <a href="!Ultraviolet.html">Ultraviolet</a>
+        <a href="https://ultra-max.pickledude448.repl.co/" target="_blank">Ultra-Max</a>
+      </div>
+    </div>
+    <a href="!Webretro.html">Webretro</a>
+    <div class="dropdown">
+      <button class="dropbtn">Roms</button>
+      <div class="dropdown-content">
+        <a href="!Roms.html">Main</a>
+        <a href="https://roms.pickledude448.repl.co/!Pokemon.html">Pokemon</a>
+        <a href="https://roms.pickledude448.repl.co/!Mario.html">Super Mario</a>
+        <a href="https://roms.pickledude448.repl.co/!LOZ.html">LOZ</a>
+        <a href="https://roms.pickledude448.repl.co/!Misc.html">Misc.</a>
+      </div>
+    </div>
+    <div class="dropdown">
+      <button class="dropbtn">Games</button>
+      <div class="dropdown-content">
+        <a href="!Games.html">Main</a>
+        <a href="!nonblocked.html">Nonblocked</a>
+        <a href="!Blocked.html">Blocked</a>
+      </div>
+    </div>
+    <a href="!about.html">About</a>
+  </div>
+
+  <h1>ROM Downloads</h1>
+
+  <div class="section">
+
+    <a href="!Pokemon.html">
+      <div class="card">
+        <img src="Pokemon Logo.png" alt="Pokemon" class="rom-image">
+        <p>Explore and download Pokémon ROMs.</p>
+      </div>
+    </a>
+
+    <a href="!Mario.html">
+      <div class="card">
+        <img src="Super Mario.png" alt="Super Mario" class="rom-image">
+        <p>Download Super Mario classics here.</p>
+      </div>
+    </a>
+
+    <a href="!LOZ.html">
+      <div class="card">
+        <img src="Zelda.png" alt="Legend of Zelda" class="rom-image">
+        <p>Legend of Zelda ROMs for your collection.</p>
+      </div>
+    </a>
+
+    <a href="!Misc.html">
+      <div class="card">
+        <h2>Misc.</h2>
+        <p>A collection of various other ROMs.</p>
+      </div>
+    </a>
+
+  </div>
+
+</body>
+</html>
