--- a/!LOZ.html
+++ b/!LOZ.html
@@ -1,113 +1,143 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-  <title>LOZ</title>
+  <meta charset="UTF-8">
+  <title>LOZ ROMs</title>
   <link rel="icon" type="image/x-icon" href="favicon.png">
   <style>
-    .topnav {
-      background-color: #333;
-      overflow: hidden;
+    :root {
+      --bg-dark: #111;
+      --text-light: #eee;
+      --primary: #007bff;
+      --accent: #ff4081;
     }
 
-    /* Style the links inside the navigation bar */
-    .topnav a {
-      float: left;
-      color: #f2f2f2;
-      text-align: center;
-      padding: 14px 16px;
-      text-decoration: none;
-      font-size: 17px;
-    }
-
-    /* Change the color of links on hover */
-    .topnav a:hover {
-      background-color: #505050;
-      color: white;
-    }
-
-    /* Add a color to the active/current link */
-    .topnav a.active {
-      background-color: #050505;
-      color: white;
-    }
-    /* The dropdown container */
-    .dropdown {
-      float: left;
-      overflow: hidden;
-    }
-
-    /* Dropdown button */
-    .dropdown .dropbtn {
-      font-size: 16px;
-      border: none;
-      outline: none;
-      color: white;
-      padding: 14px 16px;
-      background-color: inherit;
-      font-family: inherit;
-      /* Important for vertical align on mobile phones */
+    body {
       margin: 0;
-      /* Important for vertical align on mobile phones */
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: var(--bg-dark);
+      color: var(--text-light);
+      text-align: center;
     }
 
-    /* Add a red background color to navbar links on hover */
-    .navbar a:hover,
+    .topnav {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      background-color: #222;
+      padding: 10px 0;
+    }
+
+    .topnav a,
+    .dropbtn {
+      color: white;
+      padding: 12px 18px;
+      text-decoration: none;
+      font-size: 16px;
+      background: none;
+      border: none;
+      cursor: pointer;
+    }
+
+    .topnav a:hover,
     .dropdown:hover .dropbtn {
-      background-color: red;
+      background-color: #444;
     }
 
-    /* Dropdown content (hidden by default) */
+    .dropdown {
+      position: relative;
+    }
+
     .dropdown-content {
       display: none;
       position: absolute;
-      background-color: #f9f9f9;
+      top: 42px;
+      left: 0;
+      background-color: #333;
       min-width: 160px;
-      box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
       z-index: 1;
     }
 
-    /* Links inside the dropdown */
     .dropdown-content a {
-      float: none;
-      color: black;
-      padding: 12px 16px;
-      text-decoration: none;
       display: block;
+      color: #eee;
+      padding: 12px;
       text-align: left;
     }
 
-    /* Add a grey background color to dropdown links on hover */
     .dropdown-content a:hover {
-      background-color: #ddd;
+      background-color: #555;
     }
 
-    /* Show the dropdown menu on hover */
     .dropdown:hover .dropdown-content {
       display: block;
     }
+
+    h1 {
+      margin-top: 30px;
+      font-size: 3em;
+      color: var(--primary);
+    }
+
+    .section {
+      margin: 50px auto;
+      max-width: 1000px;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 30px;
+    }
+
+    .card {
+      background-color: #1e1e1e;
+      border-radius: 12px;
+      width: 250px;
+      padding: 20px;
+      box-shadow: 0 6px 16px rgba(0, 0, 0, 0.6);
+      transition: transform 0.3s ease;
+    }
+
+    .card:hover {
+      transform: translateY(-5px);
+    }
+
+    .card img {
+      width: 100%;
+      border-radius: 8px;
+      margin-bottom: 15px;
+    }
+
+    .card p {
+      font-size: 1em;
+      margin: 0;
+    }
+
+    a {
+      color: inherit;
+      text-decoration: none;
+    }
+
   </style>
 </head>
+<body>
 
-<body bgcolor="#000000">
+  <!-- Top Navigation (matches template exactly) -->
   <div class="topnav">
     <a href="https://bypass.pickledude448.repl.co/index.html">Home</a>
-     <div class="dropdown">
-      <button class="dropbtn">Proxies
-      </button>
+    <div class="dropdown">
+      <button class="dropbtn">Proxies</button>
       <div class="dropdown-content">
         <a href="https://bypass.pickledude448.repl.co/!Proxies.html">Main</a>
         <a href="https://bypass.pickledude448.repl.co/!Tsunami.html">Tsunami</a>
-<a href="https://galaxy.hop.sh/web" target="_blank">Interstellar</a>
+        <a href="https://galaxy.hop.sh/web" target="_blank">Interstellar</a>
         <a href="https://bypass.pickledude448.repl.co/!Ultraviolet.html">Ultraviolet</a> 
         <a href="https://ultra-max.pickledude448.repl.co/" target="_blank">Ultra-Max</a>
       </div>
-       </div>
+    </div>
     <a href="https://bypass.pickledude448.repl.co/!Webretro.html">Webretro</a>
-    
     <div class="dropdown">
-      <button class="dropbtn">Roms
-      </button>
+      <button class="dropbtn">Roms</button>
       <div class="dropdown-content">
         <a href="https://bypass.pickledude448.repl.co/!Roms.html">Main</a>
         <a href="https://roms.pickledude448.repl.co/!Pokemon.html">Pokemon</a>
@@ -117,33 +147,40 @@
       </div>
     </div>
     <div class="dropdown">
-      <button class="dropbtn">Games
-      </button>
+      <button class="dropbtn">Games</button>
       <div class="dropdown-content">
         <a href="https://bypass.pickledude448.repl.co/!Games.html">Main</a>
         <a href="https://bypass.pickledude448.repl.co/!nonblocked.html">Unblocked</a>
-    <a href="https://bypass.pickledude448.repl.co/!Blocked.html">Blocked</a>
+        <a href="https://bypass.pickledude448.repl.co/!Blocked.html">Blocked</a>
       </div>
-       </div>
+    </div>
     <a href="https://bypass.pickledude448.repl.co/!about.html">About</a>
   </div>
-  <h3>
-    <table>
-      <tr>
-        <td><a href="Legend of Zelda, The - Ocarina of Time (U) (V1.2) [!].zip" download><img src="Ocarina of time.jpeg"
-              alt="LOZ Ocarina of time" height="200" width="200"></a></td>
 
-        <td><a href="Legend of Zelda, The_ Majora's Mask.zip" download><img src="Majoras Mask.jpeg"
-              alt="LOZ Majora's Mask" height="200" width="200"></a></td>
-      </tr>
-      <tr>
-        <th><a href="Legend of Zelda, The_ A Link to the Past.zip" download><img src="Link to the past.jpeg"
-              alt="LOZ A Link to the Past" height="200" width="200"></a>
-      </tr>
-      </td>
-    </table>
+  <h1>Legend of Zelda ROMs</h1>
 
-  </h3>
+  <div class="section">
+    <a href="Legend of Zelda, The - Ocarina of Time (U) (V1.2) [!].zip" download>
+      <div class="card">
+        <img src="Ocarina of time.jpeg" alt="Ocarina of Time">
+        <p>Ocarina of Time (N64)</p>
+      </div>
+    </a>
+
+    <a href="Legend of Zelda, The_ Majora's Mask.zip" download>
+      <div class="card">
+        <img src="Majoras Mask.jpeg" alt="Majora's Mask">
+        <p>Majora's Mask (N64)</p>
+      </div>
+    </a>
+
+    <a href="Legend of Zelda, The_ A Link to the Past.zip" download>
+      <div class="card">
+        <img src="Link to the past.jpeg" alt="A Link to the Past">
+        <p>A Link to the Past (SNES)</p>
+      </div>
+    </a>
+  </div>
+
 </body>
-
 </html>
