--- a/!LOZ.html
+++ b/!LOZ.html
@@ -142,7 +142,7 @@
         <a href="https://theOriginal448.github.io/Bypass/!Roms.html">Main</a>
         <a href="!Pokemon.html">Pokemon</a>
         <a href="!Mario.html">Super Mario</a>
-        <a href="!LOZ.html">LOZ</a>
+        <a href="!LOZ.html">LO</a>
         <a href="!Misc.html">Misc.</a>
       </div>
     </div>
