--- a/!Mario.html
+++ b/!Mario.html
@@ -140,11 +140,11 @@
     <div class="dropdown">
       <button class="dropbtn">Roms</button>
       <div class="dropdown-content">
-        <a href="https://bypass.pickledude448.repl.co/!Roms.html">Main</a>
-        <a href="https://roms.pickledude448.repl.co/!Pokemon.html">Pokemon</a>
-        <a href="https://roms.pickledude448.repl.co/!Mario.html">Super Mario</a>
-        <a href="https://roms.pickledude448.repl.co/!LOZ.html">LOZ</a>
-        <a href="https://roms.pickledude448.repl.co/!Misc.html">Misc.</a>
+        <a href="https://theOriginal448.github.io/Bypass/!Roms.html">Main</a>
+        <a href="!Pokemon.html">Pokemon</a>
+        <a href="!Mario.html">Super Mario</a>
+        <a href="!LOZ.html">LOZ</a>
+        <a href="!Misc.html">Misc.</a>
       </div>
     </div>
     <div class="dropdown">
