--- a/!Misc.html
+++ b/!Misc.html
@@ -1,154 +1,236 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-  <title>Misc</title>
+  <meta charset="UTF-8">
+  <title>Misc ROMs</title>
   <link rel="icon" type="image/x-icon" href="favicon.png">
   <style>
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #000;
+      color: #eee;
+    }
+
     .topnav {
       background-color: #333;
       overflow: hidden;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
     }
 
-    /* Style the links inside the navigation bar */
-    .topnav a {
+    .topnav a,
+    .dropbtn {
       float: left;
       color: #f2f2f2;
       text-align: center;
       padding: 14px 16px;
       text-decoration: none;
       font-size: 17px;
+      background: none;
+      border: none;
+      cursor: pointer;
     }
 
-    /* Change the color of links on hover */
-    .topnav a:hover {
+    .topnav a:hover,
+    .dropdown:hover .dropbtn {
       background-color: #505050;
-      color: white;
     }
 
-    /* Add a color to the active/current link */
     .topnav a.active {
       background-color: #050505;
-      color: white;
     }
-    /* The dropdown container */
+
     .dropdown {
       float: left;
       overflow: hidden;
     }
 
-    /* Dropdown button */
-    .dropdown .dropbtn {
-      font-size: 16px;
-      border: none;
-      outline: none;
-      color: white;
-      padding: 14px 16px;
-      background-color: inherit;
-      font-family: inherit;
-      /* Important for vertical align on mobile phones */
-      margin: 0;
-      /* Important for vertical align on mobile phones */
-    }
-
-    /* Add a red background color to navbar links on hover */
-    .navbar a:hover,
-    .dropdown:hover .dropbtn {
-      background-color: red;
-    }
-
-    /* Dropdown content (hidden by default) */
     .dropdown-content {
       display: none;
       position: absolute;
-      background-color: #f9f9f9;
+      background-color: #333;
       min-width: 160px;
-      box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
       z-index: 1;
     }
 
-    /* Links inside the dropdown */
     .dropdown-content a {
-      float: none;
-      color: black;
+      color: white;
       padding: 12px 16px;
       text-decoration: none;
       display: block;
       text-align: left;
     }
 
-    /* Add a grey background color to dropdown links on hover */
     .dropdown-content a:hover {
-      background-color: #ddd;
+      background-color: #555;
     }
 
-    /* Show the dropdown menu on hover */
     .dropdown:hover .dropdown-content {
       display: block;
     }
+
+    h1 {
+      text-align: center;
+      margin: 30px 0;
+      color: #ff4081;
+    }
+
+    .section {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 30px;
+      padding: 20px;
+      max-width: 1200px;
+      margin: 0 auto;
+    }
+
+    .card {
+      background-color: #1a1a1a;
+      border-radius: 10px;
+      width: 220px;
+      padding: 15px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
+      transition: transform 0.3s ease;
+      text-align: center;
+    }
+
+    .card:hover {
+      transform: translateY(-5px);
+    }
+
+    .card img {
+      width: 100%;
+      height: auto;
+      border-radius: 6px;
+    }
+
+    .card p {
+      margin: 12px 0 0;
+      font-size: 0.95em;
+    }
+
+    a {
+      color: inherit;
+      text-decoration: none;
+    }
   </style>
 </head>
-<body bgcolor="#000000">
+<body>
+
+  <!-- Navigation Bar -->
   <div class="topnav">
     <a href="https://bypass.pickledude448.repl.co/index.html">Home</a>
     <div class="dropdown">
-      <button class="dropbtn">Proxies
-      </button>
+      <button class="dropbtn">Proxies</button>
       <div class="dropdown-content">
         <a href="https://bypass.pickledude448.repl.co/!Proxies.html">Main</a>
         <a href="https://bypass.pickledude448.repl.co/!Tsunami.html">Tsunami</a>
-<a href="https://galaxy.hop.sh/web" target="_blank">Interstellar</a>
+        <a href="https://galaxy.hop.sh/web" target="_blank">Interstellar</a>
         <a href="https://bypass2.pickledude448.repl.co/!Ultraviolet.html">Ultraviolet</a> 
         <a href="https://ultra-max.pickledude448.repl.co/" target="_blank">Ultra-Max</a>
       </div>
-       </div>
+    </div>
     <a href="https://bypass.pickledude448.repl.co/!Webretro.html">Webretro</a>
     <div class="dropdown">
-      <button class="dropbtn">Roms
-      </button>
+      <button class="dropbtn">Roms</button>
       <div class="dropdown-content">
-        <a href="https://bypass.pickledude448.repl.co/!Roms.html">Main</a>
-        <a href="https://roms.pickledude448.repl.co/!Pokemon.html">Pokemon</a>
-        <a href="https://roms.pickledude448.repl.co/!Mario.html">Super Mario</a>
-        <a href="https://roms.pickledude448.repl.co/!LOZ.html">LOZ</a>
-        <a href="https://roms.pickledude448.repl.co/!Misc.html">Misc.</a>
+        <a href="https://theoriginal448.github.io/Bypass/!Roms.html">Main</a>
+        <a href="!Pokemon.html">Pokemon</a>
+        <a href="!Mario.html">Super Mario</a>
+        <a href="!LOZ.html">LOZ</a>
+        <a href="!Misc.html">Misc.</a>
       </div>
     </div>
     <div class="dropdown">
-      <button class="dropbtn">Games
-      </button>
+      <button class="dropbtn">Games</button>
       <div class="dropdown-content">
         <a href="https://bypass.pickledude448.repl.co/!Games.html">Main</a>
         <a href="https://bypass.pickledude448.repl.co/!nonblocked.html">Unblocked</a>
-    <a href="https://bypass.pickledude448.repl.co/!Blocked.html">Blocked</a>
+        <a href="https://bypass.pickledude448.repl.co/!Blocked.html">Blocked</a>
       </div>
-       </div>
+    </div>
     <a href="https://bypass.pickledude448.repl.co/!about.html">About</a>
   </div>
-  <table>
-    <tr>
-      <td><a href="Monopoly (U) (V1.0) [!].zip" download><img src="Monopoly.jpg" alt="Monopoly (NES)" height="200" width="200"></a></td>
-      <td><a href="Excitebike.zip" download><img src="Excitebike.jpeg" alt="Excitebike (NES)" height="200" width="200"></a></td>
 
-      <td><a href="Mike Tyson's Punch-Out!! (U) (PRG 1) [h1].zip" download><img src="Punch Out.jpeg"
-            alt="Mike Tyson's Punch-Out"height="200" width="200"></a></td>
-    </tr>
-    <tr>
-      <td><a href="Excitebike 64.zip" download><img src="Excitebike 64.jpeg" alt="Excitebike 64" height="200" width="200"></a></td>
+  <!-- Page Title -->
+  <h1>Misc ROMs</h1>
 
-      <td><a href="Bomberman 64.zip" download><img src="Bomberman 64.jpeg" alt="Bomberman 64" height="200" width="200"></a></td>
-      <td><a href="GoldenEye 007.zip" download><img src="Goldeneye 007.jpeg" alt="GoldenEye 007" height="200" width="200"></a></td>
-    </tr>
-    <tr>
-      <td><a href="Doom 64.zip" download><img src="Doom 64.jpeg" alt="Doom 64" height="200" width="200"></a></td>
-      <td><a href="Doom.zip" download><img src="Doom.jpeg" alt="Doom GBA" height="200" width="200"></a></td>
-      <td><a href="1942.zip" download><img src="1942.jpeg" alt="1942" height="200" width="200"></a></td>
-    </tr>
-    <tr>
-      <td><a href="1943_ The Battle of Midway.zip" download><img src="1943.jpeg" alt="1943_ The Battle of Midway" height="200" width="200"></a>
-      </td>
-    </tr>
-  </table>
+  <!-- ROM Cards -->
+  <div class="section">
+
+    <a href="Monopoly (U) (V1.0) [!].zip" download>
+      <div class="card">
+        <img src="Monopoly.jpg" alt="Monopoly">
+        <p>Monopoly (NES)</p>
+      </div>
+    </a>
+
+    <a href="Excitebike.zip" download>
+      <div class="card">
+        <img src="Excitebike.jpeg" alt="Excitebike">
+        <p>Excitebike (NES)</p>
+      </div>
+    </a>
+
+    <a href="Mike Tyson's Punch-Out!! (U) (PRG 1) [h1].zip" download>
+      <div class="card">
+        <img src="Punch Out.jpeg" alt="Punch-Out!!">
+        <p>Mike Tyson's Punch-Out!!</p>
+      </div>
+    </a>
+
+    <a href="Excitebike 64.zip" download>
+      <div class="card">
+        <img src="Excitebike 64.jpeg" alt="Excitebike 64">
+        <p>Excitebike 64</p>
+      </div>
+    </a>
+
+    <a href="Bomberman 64.zip" download>
+      <div class="card">
+        <img src="Bomberman 64.jpeg" alt="Bomberman 64">
+        <p>Bomberman 64</p>
+      </div>
+    </a>
+
+    <a href="GoldenEye 007.zip" download>
+      <div class="card">
+        <img src="Goldeneye 007.jpeg" alt="GoldenEye 007">
+        <p>GoldenEye 007</p>
+      </div>
+    </a>
+
+    <a href="Doom 64.zip" download>
+      <div class="card">
+        <img src="Doom 64.jpeg" alt="Doom 64">
+        <p>Doom 64</p>
+      </div>
+    </a>
+
+    <a href="Doom.zip" download>
+      <div class="card">
+        <img src="Doom.jpeg" alt="Doom GBA">
+        <p>Doom (GBA)</p>
+      </div>
+    </a>
+
+    <a href="1942.zip" download>
+      <div class="card">
+        <img src="1942.jpeg" alt="1942">
+        <p>1942 (NES)</p>
+      </div>
+    </a>
+
+    <a href="1943_ The Battle of Midway.zip" download>
+      <div class="card">
+        <img src="1943.jpeg" alt="1943 - The Battle of Midway">
+        <p>1943: The Battle of Midway</p>
+      </div>
+    </a>
+
+  </div>
 </body>
-
 </html>
