--- a/!Pokemon.html
+++ b/!Pokemon.html
@@ -1,173 +1,268 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-  <title>Pokemon</title>
+  <meta charset="UTF-8">
+  <title>Pokémon ROMs</title>
   <link rel="icon" type="image/x-icon" href="favicon.png">
   <style>
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #000;
+      color: #eee;
+    }
+
     .topnav {
       background-color: #333;
       overflow: hidden;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
     }
 
-    /* Style the links inside the navigation bar */
-    .topnav a {
+    .topnav a,
+    .dropbtn {
       float: left;
       color: #f2f2f2;
       text-align: center;
       padding: 14px 16px;
       text-decoration: none;
       font-size: 17px;
+      background: none;
+      border: none;
+      cursor: pointer;
     }
 
-    /* Change the color of links on hover */
-    .topnav a:hover {
+    .topnav a:hover,
+    .dropdown:hover .dropbtn {
       background-color: #505050;
-      color: white;
     }
 
-    /* Add a color to the active/current link */
     .topnav a.active {
       background-color: #050505;
-      color: white;
     }
 
-    body {
-      color: #FFFFFF;
-    font-weight:normal;
-    }
-    /* The dropdown container */
     .dropdown {
       float: left;
       overflow: hidden;
     }
 
-    /* Dropdown button */
-    .dropdown .dropbtn {
-      font-size: 16px;
-      border: none;
-      outline: none;
-      color: white;
-      padding: 14px 16px;
-      background-color: inherit;
-      font-family: inherit;
-      /* Important for vertical align on mobile phones */
-      margin: 0;
-      /* Important for vertical align on mobile phones */
-    }
-
-    /* Add a red background color to navbar links on hover */
-    .navbar a:hover,
-    .dropdown:hover .dropbtn {
-      background-color: red;
-    }
-
-    /* Dropdown content (hidden by default) */
     .dropdown-content {
       display: none;
       position: absolute;
-      background-color: #f9f9f9;
+      background-color: #333;
       min-width: 160px;
-      box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
       z-index: 1;
     }
 
-    /* Links inside the dropdown */
     .dropdown-content a {
-      float: none;
-      color: black;
+      color: white;
       padding: 12px 16px;
       text-decoration: none;
       display: block;
       text-align: left;
     }
 
-    /* Add a grey background color to dropdown links on hover */
     .dropdown-content a:hover {
-      background-color: #ddd;
+      background-color: #555;
     }
 
-    /* Show the dropdown menu on hover */
     .dropdown:hover .dropdown-content {
       display: block;
+    }
+
+    h1 {
+      text-align: center;
+      margin: 30px 0;
+      color: #ffcb05;
+    }
+
+    .section {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 30px;
+      padding: 20px;
+      max-width: 1200px;
+      margin: 0 auto;
+    }
+
+    .card {
+      background-color: #1a1a1a;
+      border-radius: 10px;
+      width: 220px;
+      padding: 15px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
+      transition: transform 0.3s ease;
+      text-align: center;
+    }
+
+    .card:hover {
+      transform: translateY(-5px);
+    }
+
+    .card img {
+      width: 100%;
+      height: auto;
+      border-radius: 6px;
+    }
+
+    .card p {
+      margin: 12px 0 0;
+      font-size: 0.95em;
+    }
+
+    a {
+      color: inherit;
+      text-decoration: none;
     }
   </style>
 </head>
 
-<body bgcolor="#000000">
+<body>
+
+  <!-- Navigation Bar -->
   <div class="topnav">
     <a href="https://bypass.pickledude448.repl.co/index.html">Home</a>
     <div class="dropdown">
-      <button class="dropbtn">Proxies
-      </button>
+      <button class="dropbtn">Proxies</button>
       <div class="dropdown-content">
         <a href="https://bypass.pickledude448.repl.co/!Proxies.html">Main</a>
         <a href="https://bypass.pickledude448.repl.co/!Tsunami.html">Tsunami</a>
-<a href="https://galaxy.hop.sh/web" target="_blank">Interstellar</a>
-        <a href="https://bypass.pickledude448.repl.co/!Ultraviolet.html">Ultraviolet</a> 
+        <a href="https://galaxy.hop.sh/web" target="_blank">Interstellar</a>
+        <a href="https://bypass.pickledude448.repl.co/!Ultraviolet.html">Ultraviolet</a>
         <a href="https://ultra-max.pickledude448.repl.co/" target="_blank">Ultra-Max</a>
       </div>
-       </div>
+    </div>
     <a href="https://bypass.pickledude448.repl.co/!Webretro.html">Webretro</a>
     <div class="dropdown">
-      <button class="dropbtn">Roms
-      </button>
+      <button class="dropbtn">Roms</button>
       <div class="dropdown-content">
-        <a href="https://bypass.pickledude448.repl.co/!Roms.html">Main</a>
-        <a href="https://roms.pickledude448.repl.co/!Pokemon.html">Pokemon</a>
-        <a href="https://roms.pickledude448.repl.co/!Mario.html">Super Mario</a>
-        <a href="https://roms.pickledude448.repl.co/!LOZ.html">LOZ</a>
-        <a href="https://roms.pickledude448.repl.co/!Misc.html">Misc.</a>
+        <a href="https://theoriginal448.github.io/Bypass/!Roms.html">Main</a>
+        <a href="!Pokemon.html">Pokemon</a>
+        <a href="!Mario.html">Super Mario</a>
+        <a href="!LOZ.html">LOZ</a>
+        <a href="!Misc.html">Misc.</a>
       </div>
     </div>
     <div class="dropdown">
-      <button class="dropbtn">Games
-      </button>
+      <button class="dropbtn">Games</button>
       <div class="dropdown-content">
         <a href="https://bypass.pickledude448.repl.co/!Games.html">Main</a>
         <a href="https://bypass.pickledude448.repl.co/!nonblocked.html">Unblocked</a>
-    <a href="https://bypass.pickledude448.repl.co/!Blocked.html">Blocked</a>
+        <a href="https://bypass.pickledude448.repl.co/!Blocked.html">Blocked</a>
       </div>
-       </div>
+    </div>
     <a href="https://bypass.pickledude448.repl.co/!about.html">About</a>
   </div>
-  <h3>
-      <table>
-        <tr>
-          <td><a href="Pokemon_ Ruby Version.zip" download><img src="Pokemon RUby.jpeg" alt="Pokemon-Ruby"height="200" width="200" ></a></td>
-          <td><a href="Pokemon_ Sapphire Version.zip" download><img src="Pokemon spphire.jpeg"
-                alt="Pokemon-Sapphire" height="200" width="200"></a></td>
 
-          <td><a href="Pokemon - Platinum Version (USA) (Rev 1).zip" download><img src="Pokemon Platinum.jpeg"
-                alt="Pokemon-Platinum" height="200" width="200"></a></td>
-        </tr>
-        <tr>
-          <td><a href="Pokemon_ Diamond Version.zip" download><img src="Pokemon Diamond.jpeg" alt="Pokemon-Diamond" height="200" width="200"></a>
-          </td>
-          <td><a href="Pokemon_ Pearl Version.zip" download><img src="Pokemon pearl.jpeg" alt="Pokemon-Pearl" height="200" width="200"></a></td>
+  <!-- Page Title -->
+  <h1>Pokémon ROMs</h1>
 
-          <td><a href="Pokemon - Emerald Version (USA, Europe).zip" download><img src="Pokemon Emerald.jpeg"
-                alt="Pokemon-Emerald" height="200" width="200"></a></td>
-        </tr>
-        <tr>
-          <td><a href="Pokemon_ FireRed Version.zip" download><img src="PokemonFireRed.jpg" alt="Pokemon-FireRed" height="200" width="200"></a></td>
-          <td><a href="Pokemon - Leaf Green Version (U) (V1.1).zip" download><img src="PokemonLeafGreen.jpg" alt="Pokemon-LeafGreen" height="200" width="200"></a></td>
+  <!-- ROM Cards -->
+  <div class="section">
 
-          <td><a href="Pokemon_ Black Version.zip" download><img src="PokemonB.jpg" alt="Pokemon-Black" height="200" width="200"></a>
-          </td>
-        </tr>
-        <tr>
-          <td><a href="Pokemon_ HeartGold Version.zip" download><img src="HeartGold.jpeg" alt="Pokemon Heartgold" height="200" width="200"></a>
-          </td>
-          <td><a href="Pokemon - SoulSilver Version (USA).zip" download><img src="SoulSilver.jpeg" alt="Pokemon Blue" height="200" width="200"></a></td>
-          <td><a href="Pokemon_ Red Version.zip" download><img src="Pokemon Red.jpeg" alt="Pokemon Red" height="200" width="200"></a>
-          </td>
-        </tr>
-        <tr>
-          <td><a href="Pokemon_ Blue Version.zip" download><img src="Pokemon Blue.jpeg" alt="Pokemon Blue" height="200" width="200"></a></td>
-          <td><a href="Pokemon_ Gold Version.zip" download><img src="Pokemon gold.jpeg" alt="Pokemon Gold" height="200" width="200"></a></td>
-        </tr>
-      </table>
-    </h3>
+    <a href="Pokemon_ Ruby Version.zip" download>
+      <div class="card">
+        <img src="Pokemon RUby.jpeg" alt="Pokemon Ruby">
+        <p>Pokémon Ruby</p>
+      </div>
+    </a>
+
+    <a href="Pokemon_ Sapphire Version.zip" download>
+      <div class="card">
+        <img src="Pokemon spphire.jpeg" alt="Pokemon Sapphire">
+        <p>Pokémon Sapphire</p>
+      </div>
+    </a>
+
+    <a href="Pokemon - Platinum Version (USA) (Rev 1).zip" download>
+      <div class="card">
+        <img src="Pokemon Platinum.jpeg" alt="Pokemon Platinum">
+        <p>Pokémon Platinum</p>
+      </div>
+    </a>
+
+    <a href="Pokemon_ Diamond Version.zip" download>
+      <div class="card">
+        <img src="Pokemon Diamond.jpeg" alt="Pokemon Diamond">
+        <p>Pokémon Diamond</p>
+      </div>
+    </a>
+
+    <a href="Pokemon_ Pearl Version.zip" download>
+      <div class="card">
+        <img src="Pokemon pearl.jpeg" alt="Pokemon Pearl">
+        <p>Pokémon Pearl</p>
+      </div>
+    </a>
+
+    <a href="Pokemon - Emerald Version (USA, Europe).zip" download>
+      <div class="card">
+        <img src="Pokemon Emerald.jpeg" alt="Pokemon Emerald">
+        <p>Pokémon Emerald</p>
+      </div>
+    </a>
+
+    <a href="Pokemon_ FireRed Version.zip" download>
+      <div class="card">
+        <img src="PokemonFireRed.jpg" alt="Pokemon FireRed">
+        <p>Pokémon FireRed</p>
+      </div>
+    </a>
+
+    <a href="Pokemon - Leaf Green Version (U) (V1.1).zip" download>
+      <div class="card">
+        <img src="PokemonLeafGreen.jpg" alt="Pokemon LeafGreen">
+        <p>Pokémon LeafGreen</p>
+      </div>
+    </a>
+
+    <a href="Pokemon_ Black Version.zip" download>
+      <div class="card">
+        <img src="PokemonB.jpg" alt="Pokemon Black">
+        <p>Pokémon Black</p>
+      </div>
+    </a>
+
+    <a href="Pokemon_ HeartGold Version.zip" download>
+      <div class="card">
+        <img src="HeartGold.jpeg" alt="Pokemon HeartGold">
+        <p>Pokémon HeartGold</p>
+      </div>
+    </a>
+
+    <a href="Pokemon - SoulSilver Version (USA).zip" download>
+      <div class="card">
+        <img src="SoulSilver.jpeg" alt="Pokemon SoulSilver">
+        <p>Pokémon SoulSilver</p>
+      </div>
+    </a>
+
+    <a href="Pokemon_ Red Version.zip" download>
+      <div class="card">
+        <img src="Pokemon Red.jpeg" alt="Pokemon Red">
+        <p>Pokémon Red</p>
+      </div>
+    </a>
+
+    <a href="Pokemon_ Blue Version.zip" download>
+      <div class="card">
+        <img src="Pokemon Blue.jpeg" alt="Pokemon Blue">
+        <p>Pokémon Blue</p>
+      </div>
+    </a>
+
+    <a href="Pokemon_ Gold Version.zip" download>
+      <div class="card">
+        <img src="Pokemon gold.jpeg" alt="Pokemon Gold">
+        <p>Pokémon Gold</p>
+      </div>
+    </a>
+
+  </div>
+
 </body>
+
 </html>
